# pdf-text-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: extract_pdf.py
src/pdf_text_extractor/: __init__.py  extractor.py
tests/: __init__.py  test_extractor.py
